# OOPtest

./: CMakeLists.txt  README.md
src/: Animal.cpp  Animal.hpp  main.cpp
